[gd_scene load_steps=7 format=2]

[ext_resource path="res://ui/char_cutie_mark_outline.png" type="Texture" id=1]
[ext_resource path="res://ui/char_experience_bar_full.png" type="Texture" id=2]
[ext_resource path="res://ui/char_cutie_mark_level.png" type="Texture" id=3]
[ext_resource path="res://ui/char_experience_bar_bg.png" type="Texture" id=4]
[ext_resource path="res://ui/test_font/ntesmall.fnt" type="BitmapFont" id=5]
[ext_resource path="res://ui/char_special_talent.gd" type="Script" id=6]

[node name="MarkAndLevel" type="MarginContainer"]
margin_right = 82.0
margin_bottom = 81.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CutieMarkEXPMargin" type="MarginContainer" parent="."]
margin_right = 82.0
margin_bottom = 81.0
rect_min_size = Vector2( 82, 70 )
custom_constants/margin_left = 12

[node name="EXPBar" type="TextureProgress" parent="CutieMarkEXPMargin"]
margin_left = 12.0
margin_right = 82.0
margin_bottom = 81.0
value = 45.0
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 2 )
fill_mode = 4
radial_initial_angle = 281.0
radial_fill_degrees = 336.0

[node name="CutieMarkBGMargin" type="MarginContainer" parent="CutieMarkEXPMargin"]
margin_left = 12.0
margin_right = 82.0
margin_bottom = 81.0
custom_constants/margin_right = 3
custom_constants/margin_top = 3
custom_constants/margin_left = 3
custom_constants/margin_bottom = 3

[node name="CutieMarkBG" type="TextureRect" parent="CutieMarkEXPMargin/CutieMarkBGMargin"]
margin_left = 3.0
margin_top = 3.0
margin_right = 67.0
margin_bottom = 78.0
texture = ExtResource( 1 )

[node name="LevelBGMargin" type="MarginContainer" parent="."]
margin_right = 30.0
margin_bottom = 81.0
size_flags_horizontal = 2
custom_constants/margin_right = 0
custom_constants/margin_top = 28
custom_constants/margin_bottom = 38

[node name="LevelBG" type="NinePatchRect" parent="LevelBGMargin"]
margin_top = 28.0
margin_right = 30.0
margin_bottom = 43.0
rect_min_size = Vector2( 30, 15 )
texture = ExtResource( 3 )
patch_margin_left = 19
patch_margin_top = 2
patch_margin_right = 2
patch_margin_bottom = 2

[node name="LevelLabelMargin" type="MarginContainer" parent="LevelBGMargin"]
margin_top = 28.0
margin_right = 29.0
margin_bottom = 43.0
size_flags_horizontal = 2
custom_constants/margin_right = 1
custom_constants/margin_top = 2
custom_constants/margin_left = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level" type="Label" parent="LevelBGMargin/LevelLabelMargin"]
margin_left = 20.0
margin_top = 2.0
margin_right = 28.0
margin_bottom = 15.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "1"

[node name="ExpNumberMargin" type="MarginContainer" parent="."]
margin_right = 82.0
margin_bottom = 81.0
custom_constants/margin_right = 17
custom_constants/margin_top = 55
custom_constants/margin_left = 30

[node name="Experience" type="Label" parent="ExpNumberMargin"]
margin_left = 30.0
margin_top = 61.0
margin_right = 65.0
margin_bottom = 74.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0, 0.576471, 1, 1 )
custom_colors/font_color_shadow = Color( 1, 0.996078, 0.796078, 1 )
custom_constants/shadow_as_outline = 1
text = "45"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="ExpNumberMargin"]
margin_left = 30.0
margin_top = 55.0
margin_right = 65.0
margin_bottom = 81.0
custom_constants/separation = 0
alignment = 2

[node name="Label" type="Label" parent="ExpNumberMargin/HBoxContainer"]
visible = false
margin_left = 10.0
margin_top = 6.0
margin_right = 18.0
margin_bottom = 19.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 0.996078, 0.796078, 1 )
custom_constants/shadow_as_outline = 1
text = "/"

[node name="Blech" type="Label" parent="ExpNumberMargin/HBoxContainer"]
visible = false
margin_top = 6.0
margin_right = 26.0
margin_bottom = 19.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 0.996078, 0.796078, 1 )
custom_constants/shadow_as_outline = 1
text = "100"
